# talkapp

./: .env  Cargo.toml  Makefile  README.md  build.rs  docker-compose.yml  repomix-output.md
.github/workflows/: unit-test.yml
entity/src/: users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250213_100210_create_table_users.rs  m20250213_105425_create_table_posts.rs  m20250304_075607_create_table_messages.rs  m20250316_020000_create_table_reaction_types.rs  m20250316_020100_create_table_reactions.rs
migrations/: 20250210123000_create_users_table.sql
proto/: message.proto  post.proto  reaction.proto  user.proto
src/: client.rs  main.rs
src/domain/entity/: messages.rs  mod.rs  post.rs  prelude.rs  reaction_types.rs  reactions.rs  users.rs
src/domain/repository/: message.rs  mod.rs  post.rs  reaction.rs  user.rs
src/handler/: message_handler.rs  mod.rs  post_handler.rs  reaction_handler.rs  user_handler.rs
src/infra/: client.rs
src/repository/: message_repository.rs  mod.rs  post_repository.rs  reaction_repository.rs  user_repository.rs
src/usecase/: message_usecase.rs  mod.rs  post_usecase.rs  reaction_usecase.rs  user_usecase.rs
