[package]
name = "talkapp"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
prost = "0.13.4"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
thiserror = "2.0.11"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.12", features = ["transport"] }
serde = { version = "1.0", features = ["derive"] }
sea-orm = "1.1.4"
sea-orm-migration = "1.1.4"
tracing = "0.1.41"
async-std = { version = "1", features = ["attributes", "tokio1"] }
chrono = "0.4.39"

[build-dependencies]
tonic-build = "0.12.3"